--- a/DeviceDoze/res/drawable/switchbar_background.xml
+++ b/DeviceDoze/res/drawable/switchbar_background.xml
@@ -15,10 +15,8 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<config>
-    <component-override package="com.android.bluetooth" >
-        <component class=".avrcpcontroller.AvrcpControllerService" enabled="true" />
-        <component class=".hid.HidDeviceService" enabled="true" />
-        <component class=".sap.SapService" enabled="true" />
-    </component-override>
-</config>
+
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid android:color="@color/switch_bar_bg" />
+</shape>
